[SDESK-3805][SDESK-3807] Fixing alignment issues with event dates.

--- a/client/components/Events/style.scss
+++ b/client/components/Events/style.scss
@@ -27,3 +27,12 @@
 .sd-line-input__input--related-item-link {
     margin-right: 0.6rem;
 }
+
+.recurring-rules {
+    .sd-line-input {
+        &--no-margin {
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+    }
+}
